# rocket-auth

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml
dev/: docker-compose.yaml
migrations/2024-10-03-190426_tenant/: down.sql  up.sql
migrations/2024-10-03-190450_client/: down.sql  up.sql
migrations/2024-10-03-190706_user/: up.sql
migrations/2024-10-03-191015_authorization_code/: down.sql  up.sql
migrations/2024-10-03-191128_access_token/: up.sql
migrations/2024-10-03-191240_refresh_token/: up.sql
src/: main.rs  mod.rs  schema.rs
src/controllers/: mod.rs
src/controllers/client/: client.rs
src/controllers/tenant/: mod.rs  refresh_tenant_key.rs  tenant.rs
src/models/: access_token.rs  authorization_code.rs  client.rs  mod.rs  refresh_token.rs  tenant.rs  user.rs
src/utils/: connect_sql.rs  generate_random_hash.rs  generate_short_hash.rs  mod.rs
temp/: temp.txt
